--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.0",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.7.9",
+    "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "js-cookie": "^3.0.5",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-query": "^3.39.3",
+    "react-query-kit": "^3.3.1",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
