--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.0",
+    "@tanstack/react-query": "^5.64.2",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.9",
     "echarts": "^5.6.0",
