--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
