--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-query": "^3.39.3",
     "react-query-kit": "^3.3.1",
+    "sweetalert2": "^11.15.10",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
